--- a/StyleSheet/main.css
+++ b/StyleSheet/main.css
@@ -24,11 +24,12 @@ body {
   justify-content: center;
 }
 .wrapper {
+  position: relative;
   height: 100vh;
   width: 100%;
   overflow: hidden;
-  position: relative;
   padding: 30px 0;
+  display: flex;
 }
 
 @media (min-width: 768px) {
@@ -38,6 +39,10 @@ body {
     border-radius: 40px;
     border: 10px solid var(--black-color);
   }
+}
+.wrapper .screen {
+  flex: 1;
+  min-width: 100%;
 }
 
 .screen-backdrop {
@@ -49,7 +54,7 @@ body {
   top: 0;
   left: 50%;
   transform: translate(-50%);
-  z-index: -1;
+  z-index: 10;
 }
 .head-wrapper {
   padding: 20px 30px;
@@ -70,4 +75,78 @@ body {
 }
 .welcome p {
   font-weight: 500;
+}
+.welcome .img {
+  position: relative;
+}
+.welcome .img img {
+  width: 5rem;
+}
+.welcome .img .backdrop {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 3.8rem;
+  height: 4rem;
+  border-radius: 50%;
+  background-color: var(--white-color);
+  z-index: -1;
+}
+.categories-wrapper {
+  margin-top: 1rem;
+  height: calc(100% - 8rem);
+  padding: 0 30px;
+  padding-bottom: 20px;
+  overflow: auto;
+}
+.categories {
+  padding-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.categories .category {
+  background-color: var(--white-color);
+  border-radius: 0.5rem;
+  padding: 1.5rem 1.5rem;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  transition: all 0.3s ease-in-out;
+}
+.categories .category:hover {
+  transform: translateY(-6px);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.category .left {
+  display: flex;
+  gap: 1.5rem;
+  align-items: center;
+}
+.category .left img {
+  width: 3rem;
+}
+.categories .content h1 {
+  font-size: 1.5rem;
+}
+.categories .content p {
+  color: var(--black-color);
+  font-size: 0.8rem;
+  opacity: 0.6;
+}
+.category .toggle-btn {
+  width: 2rem;
+  cursor: pointer;
+  opacity: 0.6;
+}
+.category .options {
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s ease;
+}
+.category:hover .options {
+  opacity: 1;
+  visibility: visible;
 }
