--- a/StyleSheet/main.css
+++ b/StyleSheet/main.css
@@ -15,6 +15,9 @@
   --white-color: #fff;
   --Light-Gray-1: hsl(0, 0%, 96%);
 }
+::-webkit-scrollbar {
+  width: 0;
+}
 body {
   min-height: 100vh;
   color: var(--black-color);
@@ -43,32 +46,48 @@ body {
 .wrapper .screen {
   flex: 1;
   min-width: 100%;
+  transition: all 0.3s;
+}
+.wrapper.show-category .home-screen {
+  transform: translateX(-100%);
+}
+.wrapper.show-category .category-screen {
+  transform: translateX(-100%);
+}
+.wrapper.show-category .screen-backdrop {
+  transform: translate(-50%, -60%);
 }
 
 .screen-backdrop {
-  width: 100%;
-  height: 25rem;
-  background-color: var(--Light-grayish-red);
+  width: 135%;
+  height: 20rem;
+  background: #bdc3c7;
+  background: linear-gradient(to right, #2c3e50, #bdc3c7);
+  transition: all 0.3s;
+
   border-radius: 0 0 50% 50%;
   position: absolute;
   top: 0;
   left: 50%;
   transform: translate(-50%);
-  z-index: 10;
+  z-index: -1;
 }
 .head-wrapper {
-  padding: 20px 30px;
+  padding: 0px 30px;
 }
 .menu-btn {
   width: 2rem;
   cursor: pointer;
-  color: var(--black-color);
+  color: var(--white-color);
 }
 .welcome {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-top: 20px;
+}
+.welcome .content {
+  color: var(--white-color);
 }
 .welcome h1 {
   font-size: 1.5rem;
@@ -98,7 +117,7 @@ body {
   height: calc(100% - 8rem);
   padding: 0 30px;
   padding-bottom: 20px;
-  overflow: auto;
+  overflow: scroll;
 }
 .categories {
   padding-top: 1rem;
@@ -113,6 +132,7 @@ body {
   cursor: pointer;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   transition: all 0.3s ease-in-out;
 }
@@ -149,4 +169,15 @@ body {
 .category:hover .options {
   opacity: 1;
   visibility: visible;
+}
+
+.category-screen .head-wrapper{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.category-screen .head-wrapper svg{
+  cursor: pointer;
+  width: 2rem;
+  color: var(--white-color);
 }
