--- a/StyleSheet/main.css
+++ b/StyleSheet/main.css
@@ -14,9 +14,10 @@
   --Light-grayish-red: #e6dada;
   --white-color: #fff;
   --Light-Gray-1: hsl(0, 0%, 96%);
-  --red-color: #C51605;
-  --bg-gradient-color-1:#b92b27;
+  --red-color: #c51605;
+  --bg-gradient-color-1: #b92b27;
   --bg-gradient-color-2: #1565c0;
+  --Dark-gray: #666;
 }
 ::-webkit-scrollbar {
   width: 0;
@@ -40,7 +41,7 @@ body {
 
 @media (min-width: 768px) {
   .wrapper {
-    height: 50rem;
+    height: 47rem;
     width: 25rem;
     border-radius: 40px;
     border: 10px solid var(--black-color);
@@ -65,7 +66,11 @@ body {
   width: 135%;
   height: 20rem;
   background: var(--bg-gradient-color-1);
-  background: linear-gradient(to right, var(--bg-gradient-color-2), var(--bg-gradient-color-1));
+  background: linear-gradient(
+    to right,
+    var(--bg-gradient-color-2),
+    var(--bg-gradient-color-1)
+  );
   border-radius: 0 0 50% 50%;
   transition: all 0.3s;
   position: absolute;
@@ -279,7 +284,7 @@ body {
   border-radius: 50%;
   color: var(--black-color);
   cursor: pointer;
-  background-color: rgba(0, 0, 0, 0.031);
+  background-color: rgba(0, 0, 0, 0.051);
   opacity: 0;
   visibility: hidden;
   transition: all 0.3s;
@@ -291,4 +296,118 @@ body {
 .task-wrapper .delete:hover {
   color: var(--red-color);
   background-color: rgba(0, 0, 0, 0.1);
+}
+.add-task-btn {
+  position: absolute;
+  width: 3rem;
+  height: 3rem;
+  bottom: 1rem;
+  right: 1rem;
+  border-radius: 50%;
+  background: var(--bg-gradient-color-1);
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s;
+}
+.add-task-btn.active {
+  z-index: 1;
+  bottom: 20rem;
+  transform: rotate(45deg);
+}
+.add-task-btn:hover {
+  transform: scale(1.1);
+}
+.add-task-btn svg {
+  width: 2.3rem;
+  color: var(--white-color);
+}
+.add-task {
+  position: absolute;
+  bottom: -100%;
+  left: 0;
+  width: 100%;
+  padding: 20px 30px;
+  transition: all 0.3s;
+}
+.add-task.active {
+  bottom: 0;
+}
+.add-task .head {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+.input-group {
+  position: relative;
+  margin-bottom: 20px;
+}
+.input-group input,
+.input-group label {
+  display: block;
+  width: 100%;
+}
+.input-group input,
+.input-group select {
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 16px;
+}
+.input-group label {
+  width: max-content;
+  padding: 0 5px;
+  margin-top: 5px;
+  font-size: 14px;
+  color: var(--Dark-gray);
+  margin-bottom: 5px;
+}
+.btns {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 1rem;
+}
+.btns button {
+  padding: 10px 20px;
+  border-radius: 5px;
+  border: none;
+  font-size: 14px;
+  font-weight: 600;
+  cursor: pointer;
+  z-index: 1;
+}
+.btns button.cancel-btn {
+  background-color: var(--bg-gradient-color-2);
+  color: var(--white-color);
+}
+.btns button.add-btn {
+  background-color: var(--bg-gradient-color-1);
+  color: var(--white-color);
+}
+.add-task-backdrop {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 135%;
+  height: 20rem;
+  border-radius: 50% 50% 0 0;
+  background-color: var(--white-color);
+}
+.black-backdrop {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(5px);
+  background-color: #00000023;
+  opacity: 0;
+  visibility: hidden;
+}
+.black-backdrop.active {
+  opacity: 1;
+  visibility: visible;
 }
