--- a/StyleSheet/main.css
+++ b/StyleSheet/main.css
@@ -1,15 +1,4 @@
-/* ------------Google-Fonts----------- */
 @import "https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700&family=Nunito+Sans:opsz,wght@6..12,200;6..12,300;6..12,400;6..12,500;6..12,600;6..12,700;6..12,800;6..12,900&family=Poppins:wght@200;300;400;500;600;700;800&family=Ubuntu:wght@300;400;500;700&display=swap";
-/* ------------Reset-CSS-------------- */
-* {
-  padding: 0px;
-  margin: 0px;
-  box-sizing: border-box;
-  list-style: none;
-  outline: none;
-  font-family: "Inter", sans-serif;
-}
-
 :root {
   --black-color: #2e2e2e;
   --light-grayish-red: #e6dada;
@@ -19,6 +8,17 @@
   --bg-gradient-color-1: #b92b27;
   --bg-gradient-color-2: #1565c0;
   --dark-gray: #666;
+}
+
+/* ------------Google-Fonts----------- */
+/* ------------Reset-CSS-------------- */
+* {
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+  list-style: none;
+  outline: none;
+  font-family: "Inter", sans-serif;
 }
 
 ::-webkit-scrollbar {
@@ -36,29 +36,13 @@ body {
 
 .wrapper {
   position: relative;
+  display: flex;
   height: 100vh;
   width: 100%;
   overflow: hidden;
   padding: 30px 0;
-  display: flex;
 }
-.wrapper .screen {
-  flex: 1;
-  min-width: 100%;
-  transition: all 0.3s;
-}
-
-.wrapper.show-category .home-screen {
-  transform: translateX(-100%);
-}
-.wrapper.show-category .category-screen {
-  transform: translateX(-100%);
-}
-.wrapper.show-category .screen-backdrop {
-  transform: translate(-50%, -60%);
-}
-
-.screen-backdrop {
+.wrapper .screen-backdrop {
   width: 135%;
   height: 20rem;
   background: var(--bg-gradient-color-1);
@@ -71,55 +55,56 @@ body {
   transform: translate(-50%);
   z-index: -1;
 }
-
-.head-wrapper {
+.wrapper .screen {
+  flex: 1;
+  min-width: 100%;
+  transition: all 0.3s;
+}
+.wrapper .screen .head-wrapper {
   padding: 0px 30px;
 }
-
-.head-top {
+.wrapper .screen .head-wrapper .head-top {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
 }
-.head-top .menu-btn {
+.wrapper .screen .head-wrapper .head-top .menu-btn {
   width: 2rem;
   cursor: pointer;
   color: var(--white-color);
 }
-
-.top-logo {
+.wrapper .screen .head-wrapper .head-top .top-logo {
   width: 35px;
   height: 35px;
 }
-.top-logo img {
+.wrapper .screen .head-wrapper .head-top .top-logo img {
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
   height: 100%;
 }
-
-.welcome {
+.wrapper .screen .head-wrapper .welcome {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-top: 30px;
 }
-.welcome .content {
+.wrapper .screen .head-wrapper .welcome .content {
   color: var(--white-color);
 }
-.welcome h1 {
+.wrapper .screen .head-wrapper .welcome h1 {
   font-size: 1.5rem;
 }
-.welcome p {
+.wrapper .screen .head-wrapper .welcome p {
   font-weight: 500;
 }
-.welcome .img {
+.wrapper .screen .head-wrapper .welcome .img {
   position: relative;
 }
-.welcome .img img {
+.wrapper .screen .head-wrapper .welcome .img img {
   width: 5rem;
 }
-.welcome .img .backdrop {
+.wrapper .screen .head-wrapper .welcome .img .backdrop {
   position: absolute;
   top: 0;
   left: 50%;
@@ -130,6 +115,15 @@ body {
   background-color: var(--white-color);
   z-index: -1;
 }
+.wrapper.show-category .home-screen {
+  transform: translateX(-100%);
+}
+.wrapper.show-category .category-screen {
+  transform: translateX(-100%);
+}
+.wrapper.show-category .screen-backdrop {
+  transform: translate(-50%, -60%);
+}
 
 .categories-wrapper {
   margin-top: 1rem;
@@ -138,58 +132,58 @@ body {
   padding-bottom: 20px;
   overflow: scroll;
 }
-
-.categories {
+.categories-wrapper .categories {
   padding-top: 1rem;
   display: flex;
+  justify-content: space-between;
   flex-direction: column;
   gap: 1rem;
 }
-.categories .category {
+.categories-wrapper .categories .category {
   background-color: var(--white-color);
   border-radius: 0.5rem;
   padding: 1.5rem 1.5rem;
   cursor: pointer;
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   transition: all 0.3s ease-in-out;
 }
-.categories .category:hover {
-  transform: translateY(-6px);
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
-.categories .content h1 {
-  font-size: 1.5rem;
-}
-.categories .content p {
-  color: var(--black-color);
-  font-size: 0.8rem;
-  opacity: 0.6;
-}
-
-.category .left {
+.categories-wrapper .categories .category .left {
   display: flex;
-  gap: 1.5rem;
   align-items: center;
+  justify-content: space-between;
+  gap: 1.5rem;
 }
-.category .left img {
+.categories-wrapper .categories .category .left img {
   width: 3rem;
 }
-.category .toggle-btn {
-  width: 2rem;
-  cursor: pointer;
-  opacity: 0.6;
-}
-.category .options {
+.categories-wrapper .categories .category .options {
   opacity: 0;
   visibility: hidden;
   transition: all 0.3s ease;
 }
-.category:hover .options {
+.categories-wrapper .categories .category .options .toggle-btn {
+  width: 2rem;
+  cursor: pointer;
+  opacity: 0.6;
+}
+.categories-wrapper .categories .category .options:hover .options {
   opacity: 1;
   visibility: visible;
+}
+.categories-wrapper .categories .category:hover {
+  transform: translateY(-6px);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.categories-wrapper .categories .content h1 {
+  font-size: 1.5rem;
+}
+.categories-wrapper .categories .content p {
+  color: var(--black-color);
+  font-size: 0.8rem;
+  opacity: 0.6;
 }
 
 .category-screen .head-wrapper {
@@ -287,18 +281,17 @@ body {
   height: 1rem;
   border-radius: 3px;
   border: 1px solid var(--black-color);
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 .task .checkmark svg {
   width: 1rem;
   color: var(--black-color);
   opacity: 0;
+  visibility: hidden;
   transition: all 0.2s ease;
 }
 .task:hover .checkmark svg {
   opacity: 1;
+  visibility: visible;
 }
 
 .add-task-btn {
@@ -337,13 +330,12 @@ body {
   padding: 20px 30px;
   transition: all 0.3s;
 }
+.add-task.active {
+  bottom: 0;
+}
 .add-task .head {
   font-size: 1.5rem;
   margin-bottom: 1rem;
-}
-
-.add-task.active {
-  bottom: 0;
 }
 
 .input-group {
@@ -352,7 +344,6 @@ body {
 }
 .input-group input {
   display: block;
-  width: 100%;
   width: 100%;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -380,8 +371,8 @@ body {
 
 .btns {
   display: flex;
-  justify-content: flex-end;
   align-items: center;
+  justify-content: flex-end;
   gap: 1rem;
 }
 .btns button {
@@ -404,7 +395,7 @@ body {
 
 .add-task-backdrop {
   position: absolute;
-  bottom: 0;
+  top: 0;
   left: 50%;
   transform: translateX(-50%);
   width: 135%;
