--- a/StyleSheet/main.css
+++ b/StyleSheet/main.css
@@ -42,7 +42,7 @@ body {
   overflow: hidden;
   padding: 30px 0;
 }
-.wrapper .screen-backdrop {
+.wrapper .backdrop-screen {
   width: 135%;
   height: 20rem;
   background: var(--bg-gradient-color-1);
@@ -121,7 +121,7 @@ body {
 .wrapper.show-category .category-screen {
   transform: translateX(-100%);
 }
-.wrapper.show-category .screen-backdrop {
+.wrapper.show-category .backdrop-screen {
   transform: translate(-50%, -60%);
 }
 
@@ -135,6 +135,7 @@ body {
 .categories-wrapper .categories {
   padding-top: 1rem;
   display: flex;
+  align-items: initial;
   justify-content: space-between;
   flex-direction: column;
   gap: 1rem;
@@ -148,7 +149,7 @@ body {
   align-items: center;
   justify-content: space-between;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.3s;
 }
 .categories-wrapper .categories .category .left {
   display: flex;
@@ -191,10 +192,20 @@ body {
   align-items: center;
   justify-content: space-between;
 }
-.category-screen .head-wrapper svg {
+.category-screen .head-wrapper .back-btn {
   cursor: pointer;
   width: 2rem;
   color: var(--white-color);
+}
+.category-screen .head-wrapper .top-logo {
+  width: 35px;
+  height: 35px;
+}
+.category-screen .head-wrapper .top-logo img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .category-details {
@@ -222,6 +233,8 @@ body {
 .tasks {
   padding-top: 1rem;
   display: flex;
+  align-items: 0;
+  justify-content: center;
   flex-direction: column;
   gap: 1rem;
 }
@@ -254,8 +267,9 @@ body {
 
 .task {
   display: flex;
-  gap: 0.5rem;
   align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
   font-size: 0.8rem;
   font-weight: 500;
   width: -moz-max-content;
@@ -281,6 +295,9 @@ body {
   height: 1rem;
   border-radius: 3px;
   border: 1px solid var(--black-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .task .checkmark svg {
   width: 1rem;
@@ -315,11 +332,10 @@ body {
   width: 2.3rem;
   color: var(--white-color);
 }
-
 .add-task-btn.active {
-  z-index: 1;
-  bottom: 20rem;
   transform: rotate(45deg);
+  bottom: 20rem;
+  z-index: 1;
 }
 
 .add-task {
@@ -384,11 +400,11 @@ body {
   cursor: pointer;
   z-index: 1;
 }
-.btns button.cancel-btn {
+.btns button.add-btn {
   background-color: var(--bg-gradient-color-2);
   color: var(--white-color);
 }
-.btns button.add-btn {
+.btns button.cancel-btn {
   background-color: var(--bg-gradient-color-1);
   color: var(--white-color);
 }
@@ -416,7 +432,6 @@ body {
   opacity: 0;
   visibility: hidden;
 }
-
 .black-backdrop.active {
   opacity: 1;
   visibility: visible;
