--- a/scss/main.scss
+++ b/scss/main.scss
@@ -122,6 +122,7 @@ body {
         .backdrop-screen {
             transform: translate(-50%, -60%);
         }
+
         // @each $types, $transform in $translates{
         //     @include transform($types,)
         // }
@@ -236,18 +237,27 @@ body {
     }
 }
 
+
+
+.tasks {
+    padding-top: 1rem;
+    @include flex-direction(center, 0, flex-direction, column);
+    gap: 1rem;
+
+    .no-task {
+        margin-top: 5rem;
+        text-align: center;
+        font-size: 1.5rem;
+        opacity: 0.6;
+    }
+
+}
 .tasks-wrapper {
     padding: 0 30px;
     margin-top: 1rem;
     height: calc(100% - 12rem);
     padding-bottom: 20px;
     overflow: auto;
-}
-
-.tasks {
-    padding-top: 1rem;
-    @include flex-direction(center, 0, flex-direction, column);
-    gap: 1rem;
 }
 
 .task-wrapper {
