--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,3 @@
-;
 @import "../scss/mixins.scss";
 @import "../scss/variables.scss";
 /* ------------Google-Fonts----------- */
@@ -28,9 +27,9 @@ body {
 .wrapper {
     position: relative;
     display: flex;
+    overflow: hidden;
     height: $height-size_1;
     width: $width-size_1;
-    overflow: hidden;
     padding: 30px 0;
 
     .backdrop-screen {
@@ -52,25 +51,7 @@ body {
 
         .head-wrapper {
             padding: 0px 30px;
-
-            .head-top {
-                @include flex-box(center, space-between);
-
-                .menu-btn {
-                    width: $width-size_2 - 3;
-                    cursor: pointer;
-                    color: $color_2;
-                }
-
-                .top-logo {
-                    width: 35px;
-                    height: 35px;
-
-                    img {
-                        @include object-fit(cover);
-                    }
-                }
-            }
+            @include head-top(menu);
 
             .welcome {
                 @include flex-box(center, space-between);
@@ -78,16 +59,17 @@ body {
 
                 .content {
                     color: $color_2;
+
+                    h1 {
+                        font-size: 1.5rem;
+                    }
+
+                    p {
+                        font-weight: 500;
+                        line-height: 20px;
+                    }
                 }
 
-                h1 {
-                    font-size: 1.5rem;
-                }
-
-                p {
-                    font-weight: 500;
-                    line-height: 20px;
-                }
 
                 .img {
                     position: relative;
@@ -111,10 +93,8 @@ body {
     }
 
     &.show-category {
-        .home-screen {
-            transform: translateX(-100%);
-        }
 
+        .home-screen,
         .category-screen {
             transform: translateX(-100%);
         }
@@ -122,10 +102,6 @@ body {
         .backdrop-screen {
             transform: translate(-50%, -60%);
         }
-
-        // @each $types, $transform in $translates{
-        //     @include transform($types,)
-        // }
     }
 }
 
@@ -169,11 +145,8 @@ body {
                     opacity: 0.6;
                 }
 
-                &:hover {
-                    .options {
-                        @include hidden(visible, 1);
-
-                    }
+                &:hover .options {
+                    @include hidden(visible, 1);
                 }
             }
 
@@ -198,149 +171,132 @@ body {
 }
 
 .category-screen {
-    .head-wrapper {
-        @include flex-box(center, space-between);
+    @include head-top(back);
 
-        .back-btn {
-            cursor: pointer;
-            width: $width-size_2 - 3;
-            color: $color_2;
+    .category-details {
+        padding: 0 30px;
+        margin-top: 8rem;
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+
+        img {
+            width: $width-size_2 - 1;
         }
 
-        .top-logo {
-            width: 35px;
-            height: 35px;
-
-            img {
-                @include object-fit(cover);
+        .details {
+            p {
+                opacity: 0.6;
             }
         }
-
-    }
-}
-
-.category-details {
-    padding: 0 30px;
-    margin-top: 8rem;
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-
-    img {
-        width: $width-size_2 - 1;
-    }
-
-    .details {
-        p {
-            opacity: 0.6;
-        }
     }
 }
 
 
 
-.tasks {
-    padding-top: 1rem;
-    @include flex-direction(center, 0, flex-direction, column);
-    gap: 1rem;
-
-    .no-task {
-        margin-top: 5rem;
-        text-align: center;
-        font-size: 1.5rem;
-        opacity: 0.6;
-    }
-
-}
 .tasks-wrapper {
     padding: 0 30px;
     margin-top: 1rem;
     height: calc(100% - 12rem);
     padding-bottom: 20px;
     overflow: auto;
-}
 
-.task-wrapper {
-    @include flex-box(center, space-between);
+    .tasks {
+        padding-top: 1rem;
+        @include flex-direction(center, 0, flex-direction, column);
+        gap: 1rem;
 
-
-    .delete {
-        min-width: $width-size_2 - 3;
-        height: $height-size_2 - 18;
-        padding: 0.5rem;
-        border-radius: 50%;
-        color: $color_1;
-        cursor: pointer;
-        background-color: $background-color_4;
-        @include hidden(hidden, 0);
-        transition: all 0.3s;
-
-        &:hover {
-            color: $color_3;
-            background-color: $background-color_5;
+        .no-task {
+            margin-top: 5rem;
+            @include flex-box(center, center);
+            text-align: center;
+            font-size: 1.5rem;
+            opacity: 0.6;
         }
-    }
 
-    &:hover {
-        .delete {
-            @include hidden(visible, 1)
-        }
-    }
-}
+        .task-wrapper {
+            @include flex-box(center, space-between);
 
-.task {
-    @include flex-box(center, center);
-    gap: 0.5rem;
-    font-size: 0.8rem;
-    font-weight: 500;
-    width: max-content;
-    cursor: pointer;
+            .delete {
+                min-width: $width-size_2 - 3;
+                height: $height-size_2 - 18;
+                padding: 0.5rem;
+                border-radius: 50%;
+                color: $color_1;
+                cursor: pointer;
+                background-color: $background-color_4;
+                @include hidden(hidden, 0);
+                transition: all 0.3s;
 
-    input {
-        display: none;
+                &:hover {
+                    color: $color_3;
+                    background-color: $background-color_5;
+                }
+            }
 
-        &:checked {
-            ~ {
-                .checkmark {
-                    background-color: $background-color_3;
+            &:hover .delete {
+                @include hidden(visible, 1)
+            }
 
-                    svg {
-                        color: $color_2;
-                        opacity: 1;
+            .task {
+                @include flex-box(center, center);
+                gap: 0.5rem;
+                font-size: 0.8rem;
+                font-weight: 500;
+                width: max-content;
+                cursor: pointer;
+
+                input {
+                    display: none;
+
+                    &:checked {
+                        ~ {
+                            .checkmark {
+                                background-color: $background-color_3;
+
+                                svg {
+                                    color: $color_2;
+                                    @include hidden(visible, 1);
+                                }
+                            }
+
+                            p {
+                                text-decoration: line-through;
+                                opacity: 0.6;
+                            }
+                        }
                     }
                 }
 
-                p {
-                    text-decoration: line-through;
-                    opacity: 0.6;
+                .checkmark {
+                    width: $width-size_2 - 4;
+                    height: $height-size_2 - 19;
+                    border-radius: 3px;
+                    border: 1px solid var(--black-color);
+                    @include flex-box(center, center);
+
+                    svg {
+                        width: $width-size_2 - 4;
+                        color: $color_1;
+                        @include hidden(hidden, 0);
+                        transition: all 0.2s ease;
+                    }
+                }
+
+                &:hover {
+                    .checkmark {
+                        svg {
+                            @include hidden(visible, 1);
+                        }
+                    }
                 }
             }
         }
     }
 
-    .checkmark {
-        width: $width-size_2 - 4;
-        height: $height-size_2 - 19;
-        border-radius: 3px;
-        border: 1px solid var(--black-color);
-        @include flex-box(center, center);
-
-        svg {
-            width: $width-size_2 - 4;
-            color: $color_1;
-            @include hidden(hidden, 0);
-            transition: all 0.2s ease;
-        }
-    }
-
-    &:hover {
-        .checkmark {
-            svg {
-                @include hidden(visible, 1);
-            }
-        }
-    }
 }
+
+
 
 .add-task-btn {
     position: absolute;
@@ -374,18 +330,19 @@ body {
     position: absolute;
     bottom: -100%;
     left: 0;
-
     width: $width-size_1;
-    padding: 20px 30px;
+    padding: 50px 30px;
     transition: all 0.3s;
 
     &.active {
-        bottom: 0;
+        bottom: -30px;
     }
 
     .head {
         font-size: 1.5rem;
         margin-bottom: 1rem;
+        position: relative;
+        z-index: 10;
     }
 }
 
@@ -453,7 +410,7 @@ body {
     height: $height-size_2;
     border-radius: 50% 50% 0 0;
     background-color: $background-color_2;
-   
+
 }
 
 .black-backdrop {
