--- a/StyleSheet/main.css
+++ b/StyleSheet/main.css
@@ -1,34 +1,45 @@
+/*--------------Colors-----------*/
+/*--------------Fonts-----------*/
 @import "https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700&family=Nunito+Sans:opsz,wght@6..12,200;6..12,300;6..12,400;6..12,500;6..12,600;6..12,700;6..12,800;6..12,900&family=Poppins:wght@200;300;400;500;600;700;800&family=Ubuntu:wght@300;400;500;700&display=swap";
-:root {
-  --black-color: #2e2e2e;
-  --light-grayish-red: #e6dada;
-  --white-color: #fff;
-  --light-gray-1: hsl(0, 0%, 96%);
-  --red-color: #c51605;
-  --bg-gradient-color-1: #b92b27;
-  --bg-gradient-color-2: #1565c0;
-  --dark-gray: #666;
+.add-task .input-group .todo-input,
+.add-task .input-group .todo-category {
+  display: block;
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 16px;
 }
 
-/* ------------Google-Fonts----------- */
-/* ------------Reset-CSS-------------- */
 * {
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
   list-style: none;
   outline: none;
+  text-decoration: none;
   font-family: "Inter", sans-serif;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
 }
 
 ::-webkit-scrollbar {
   width: 0;
 }
 
+/* ------------Google-Fonts----------- */
 body {
   min-height: 100vh;
-  color: var(--black-color);
-  background-color: var(--Light-Gray-1);
+  color: #2e2e2e;
+  background-color: hsl(0, 0%, 96%);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -45,15 +56,15 @@ body {
 .wrapper .backdrop-screen {
   width: 135%;
   height: 25rem;
-  background: var(--bg-gradient-color-1);
-  background: linear-gradient(to right, var(--bg-gradient-color-2), var(--bg-gradient-color-1));
+  background: #1565c0;
+  background: linear-gradient(to right, #b92b27, #1565c0);
   border-radius: 0 0 50% 50%;
-  transition: all 0.3s;
   position: absolute;
   top: 0;
   left: 50%;
   transform: translate(-50%);
   z-index: -1;
+  transition: all 0.3s;
 }
 .wrapper .screen {
   flex: 1;
@@ -71,7 +82,7 @@ body {
 .wrapper .screen .head-wrapper .head-top .menu-btn {
   cursor: pointer;
   width: 2rem;
-  color: var(--white-color);
+  color: #fff;
 }
 .wrapper .screen .head-wrapper .head-top .top-logo {
   width: 35px;
@@ -89,31 +100,31 @@ body {
   justify-content: space-between;
   margin-top: 30px;
 }
-.wrapper .screen .head-wrapper .welcome .content {
-  color: var(--white-color);
+.wrapper .screen .head-wrapper .content {
+  color: #fff;
 }
-.wrapper .screen .head-wrapper .welcome .content h1 {
+.wrapper .screen .head-wrapper .content-head {
   font-size: 1.5rem;
 }
-.wrapper .screen .head-wrapper .welcome .content p {
+.wrapper .screen .head-wrapper .content-text {
   font-weight: 500;
   line-height: 20px;
 }
-.wrapper .screen .head-wrapper .welcome .img {
+.wrapper .screen .head-wrapper .user-img {
   position: relative;
 }
-.wrapper .screen .head-wrapper .welcome .img img {
+.wrapper .screen .head-wrapper .user-img img {
   width: 5rem;
 }
-.wrapper .screen .head-wrapper .welcome .img .backdrop {
+.wrapper .screen .head-wrapper .user-img .backdrop {
   position: absolute;
   top: 0;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(-50%);
   width: 3.8rem;
   height: 4rem;
   border-radius: 50%;
-  background-color: var(--white-color);
+  background-color: #fff;
   z-index: -1;
 }
 .wrapper.show-category .home-screen,
@@ -140,9 +151,9 @@ body {
   gap: 1rem;
 }
 .categories-wrapper .categories .category {
-  background-color: var(--white-color);
+  background-color: #fff;
   border-radius: 0.5rem;
-  padding: 1.5rem 1.5rem;
+  padding: 1.5rem;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -181,7 +192,7 @@ body {
   font-size: 1.5rem;
 }
 .categories-wrapper .categories .content p {
-  color: var(--black-color);
+  color: #2e2e2e;
   font-size: 0.8rem;
   opacity: 0.6;
 }
@@ -194,7 +205,7 @@ body {
 .category-screen .head-top .back-btn {
   cursor: pointer;
   width: 2rem;
-  color: var(--white-color);
+  color: #fff;
 }
 .category-screen .head-top .top-logo {
   width: 35px;
@@ -254,15 +265,15 @@ body {
   height: 2rem;
   padding: 0.5rem;
   border-radius: 50%;
-  color: var(--black-color);
+  color: #2e2e2e;
   cursor: pointer;
-  background-color: rgba(0, 0, 0, 0.051);
+  background-color: rgba(0, 0, 0, 0.055);
   opacity: 0;
   visibility: hidden;
   transition: all 0.3s;
 }
 .tasks-wrapper .tasks .task-wrapper .delete:hover {
-  color: var(--red-color);
+  color: #c51605;
   background-color: rgba(0, 0, 0, 0.1);
 }
 .tasks-wrapper .tasks .task-wrapper:hover .delete {
@@ -284,10 +295,10 @@ body {
   display: none;
 }
 .tasks-wrapper .tasks .task-wrapper .task input:checked ~ .checkmark {
-  background-color: var(--black-color);
+  background-color: #2e2e2e;
 }
 .tasks-wrapper .tasks .task-wrapper .task input:checked ~ .checkmark svg {
-  color: var(--white-color);
+  color: #fff;
   opacity: 1;
   visibility: visible;
 }
@@ -299,14 +310,14 @@ body {
   width: 1rem;
   height: 1rem;
   border-radius: 3px;
-  border: 1px solid var(--black-color);
+  border: 1px solid #2e2e2e;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 .tasks-wrapper .tasks .task-wrapper .task .checkmark svg {
   width: 1rem;
-  color: var(--black-color);
+  color: #2e2e2e;
   opacity: 0;
   visibility: hidden;
   transition: all 0.2s ease;
@@ -323,7 +334,7 @@ body {
   bottom: 1rem;
   right: 1rem;
   border-radius: 50%;
-  background: var(--bg-gradient-color-1);
+  background-color: #b92b27;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -335,7 +346,7 @@ body {
 }
 .add-task-btn svg {
   width: 2.3rem;
-  color: var(--white-color);
+  color: #fff;
 }
 .add-task-btn.active {
   transform: rotate(45deg);
@@ -355,18 +366,18 @@ body {
   position: absolute;
   top: 0;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(-50%);
   width: 135%;
-  height: 20rem;
+  height: 21rem;
   border-radius: 50% 50% 0 0;
-  background-color: var(--white-color);
+  background-color: #fff;
 }
 .add-task.active {
   bottom: -30px;
 }
 .add-task .head {
   font-size: 1.5rem;
-  margin-bottom: 1rem;
+  margin-bottom: 20px;
   position: relative;
   z-index: 10;
 }
@@ -374,29 +385,12 @@ body {
   position: relative;
   margin-bottom: 20px;
 }
-.add-task .input-group input {
-  display: block;
-  width: 100%;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 10px;
-  font-size: 16px;
-}
 .add-task .input-group label {
   display: block;
   width: 100%;
-  padding: 0 5px;
-  margin-top: 5px;
-  font-size: 14px;
-  color: var(--Dark-gray);
-  margin-bottom: 5px;
-}
-.add-task .input-group select {
-  width: 100%;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 10px;
-  font-size: 16px;
+  font-size: 15px;
+  padding: 6px;
+  color: #666;
 }
 .add-task .btns {
   display: flex;
@@ -414,25 +408,26 @@ body {
   z-index: 1;
 }
 .add-task .btns button.add-btn {
-  background-color: var(--bg-gradient-color-2);
-  color: var(--white-color);
+  background-color: #1565c0;
+  color: #fff;
 }
 .add-task .btns button.cancel-btn {
-  background-color: var(--bg-gradient-color-1);
-  color: var(--white-color);
+  background-color: #b92b27;
+  color: #fff;
 }
 
 .black-backdrop {
   position: absolute;
   top: 0;
   left: 0;
+  transform: translate(0);
+  opacity: 0;
+  visibility: hidden;
   width: 100%;
   height: 100%;
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
   background-color: rgba(0, 0, 0, 0.137254902);
-  opacity: 0;
-  visibility: hidden;
 }
 .black-backdrop.active {
   opacity: 1;
@@ -443,7 +438,7 @@ body {
   .wrapper {
     height: 50rem;
     width: 25rem;
-    border-radius: 40px;
-    border: 10px solid var(--black-color);
+    border-radius: 35px;
+    border: 10px solid #2e2e2e;
   }
 }/*# sourceMappingURL=main.css.map */
