--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,26 +1,14 @@
-@import "../scss/mixins.scss";
-@import "../scss/variables.scss";
+@import "../scss/mixins";
+@import "../scss/variables";
+@import "../scss/placeholders";
+@import "../scss/reset";
 /* ------------Google-Fonts----------- */
 @import "https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700&family=Nunito+Sans:opsz,wght@6..12,200;6..12,300;6..12,400;6..12,500;6..12,600;6..12,700;6..12,800;6..12,900&family=Poppins:wght@200;300;400;500;600;700;800&family=Ubuntu:wght@300;400;500;700&display=swap";
-
-/* ------------Reset-CSS-------------- */
-* {
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
-    list-style: none;
-    outline: none;
-    font-family: $font-family_1;
-}
-
-::-webkit-scrollbar {
-    width: 0;
-}
 
 body {
     min-height: $height-size_1;
     color: $color_1;
-    background-color: $background-color_1;
+    background-color: $color_5;
     @include flex-box(center, center);
 }
 
@@ -35,13 +23,12 @@ body {
     .backdrop-screen {
         width: $width-size_1 + 35;
         height: $height-size_2 + 5;
-        background: $background-color_7;
-        background: linear-gradient(to right, $background-color_6, $background-color_7);
+        background: $color_7;
+        background: linear-gradient(to right, $color_6, $color_7);
         border-radius: 0 0 50% 50%;
-        transition: all 0.3s;
         @include position-absolute(50%);
-        transform: translate(-50%);
         z-index: -1;
+        transition: all 0.3s;
     }
 
     .screen {
@@ -56,37 +43,35 @@ body {
             .welcome {
                 @include flex-box(center, space-between);
                 margin-top: 30px;
+            }
 
-                .content {
-                    color: $color_2;
+            .content {
+                color: $color_2;
 
-                    h1 {
-                        font-size: 1.5rem;
-                    }
-
-                    p {
-                        font-weight: 500;
-                        line-height: 20px;
-                    }
+                &-head {
+                    font-size: 1.5rem;
                 }
 
+                &-text {
+                    font-weight: 500;
+                    line-height: 20px;
+                }
+            }
 
-                .img {
-                    position: relative;
+            .user-img {
+                position: relative;
 
-                    img {
-                        width: $width-size_2;
-                    }
+                img {
+                    width: $width-size_2;
+                }
 
-                    .backdrop {
-                        @include position-absolute(50%);
-                        transform: translateX(-50%);
-                        width: $width-size_2 - 1.2;
-                        height: $height-size_2 - 16;
-                        border-radius: 50%;
-                        background-color: $background-color_2;
-                        z-index: -1;
-                    }
+                .backdrop {
+                    @include position-absolute(50%);
+                    width: $width-size_2 - 1.2;
+                    height: $height-size_2 - 16;
+                    border-radius: 50%;
+                    background-color: $color_2;
+                    z-index: -1;
                 }
             }
         }
@@ -102,7 +87,7 @@ body {
         .backdrop-screen {
             transform: translate(-50%, -60%);
         }
-       
+
     }
 }
 
@@ -119,9 +104,9 @@ body {
         gap: 1rem;
 
         .category {
-            background-color: $background-color_2;
+            background-color: $color_2;
             border-radius: 0.5rem;
-            padding: 1.5rem 1.5rem;
+            padding: 1.5rem;
             cursor: pointer;
             @include flex-box(center, space-between);
             box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -185,10 +170,10 @@ body {
             width: $width-size_2 - 1;
         }
 
-        .details {
-            p {
-                opacity: 0.6;
-            }
+        .details p {
+
+            opacity: 0.6;
+
         }
     }
 }
@@ -225,13 +210,13 @@ body {
                 border-radius: 50%;
                 color: $color_1;
                 cursor: pointer;
-                background-color: $background-color_4;
+                background-color: $background-color_1;
                 @include hidden(hidden, 0);
                 transition: all 0.3s;
 
                 &:hover {
                     color: $color_3;
-                    background-color: $background-color_5;
+                    background-color: $background-color_2;
                 }
             }
 
@@ -253,7 +238,7 @@ body {
                     &:checked~ {
 
                         .checkmark {
-                            background-color: $background-color_3;
+                            background-color: $color_1;
 
                             svg {
                                 color: $color_2;
@@ -273,7 +258,7 @@ body {
                     width: $width-size_2 - 4;
                     height: $height-size_2 - 19;
                     border-radius: 3px;
-                    border: 1px solid var(--black-color);
+                    border: 1px solid $color_1;
                     @include flex-box(center, center);
 
                     svg {
@@ -284,12 +269,9 @@ body {
                     }
                 }
 
-                &:hover {
-                    .checkmark {
-                        svg {
-                            @include hidden(visible, 1);
-                        }
-                    }
+                &:hover .checkmark svg {
+                    @include hidden(visible, 1);
+
                 }
             }
         }
@@ -306,7 +288,7 @@ body {
     bottom: 1rem;
     right: 1rem;
     border-radius: 50%;
-    background: var(--bg-gradient-color-1);
+    background-color: $color_6;
     cursor: pointer;
     @include flex-box(center, center);
     transition: all 0.3s;
@@ -335,11 +317,10 @@ body {
 
     .add-task-backdrop {
         @include position-absolute(50%);
-        transform: translateX(-50%);
         width: $width-size_1 + 35;
-        height: $height-size_2;
+        height: $height-size_2 + 1;
         border-radius: 50% 50% 0 0;
-        background-color: $background-color_2;
+        background-color: $color_2;
 
     }
 
@@ -349,7 +330,7 @@ body {
 
     .head {
         font-size: 1.5rem;
-        margin-bottom: 1rem;
+        margin-bottom: 20px;
         position: relative;
         z-index: 10;
     }
@@ -358,31 +339,17 @@ body {
         position: relative;
         margin-bottom: 20px;
 
-        input {
-            display: block;
-            width: $width-size_1;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            padding: 10px;
-            font-size: 16px;
+        .todo-input,
+        .todo-category {
+            @extend %input-design;
         }
 
         label {
             display: block;
             width: $width-size_1;
-            padding: 0 5px;
-            margin-top: 5px;
-            font-size: 14px;
+            font-size: 15px;
+            padding: 6px;
             color: $color_4;
-            margin-bottom: 5px;
-        }
-
-        select {
-            width: $width-size_1;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            padding: 10px;
-            font-size: 16px;
         }
     }
 
@@ -413,11 +380,11 @@ body {
 
 .black-backdrop {
     @include position-absolute(0);
+    @include hidden(hidden, 0);
     width: $width-size_1;
     height: $height-size_3;
     backdrop-filter: blur(5px);
-    background-color: $background-color_8;
-    @include hidden(hidden, 0);
+    background-color: $background-color_3;
 
     &.active {
         @include hidden(visible, 1)
@@ -429,7 +396,7 @@ body {
     .wrapper {
         height: 50rem;
         width: 25rem;
-        border-radius: 40px;
-        border: 10px solid var(--black-color);
+        border-radius: 35px;
+        border: 10px solid $color_1;
     }
 }
